// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel: server side rendering flushing 1`] = `
Array [
  "/component.js",
  "/component2.js",
]
`;

exports[`babel: server side rendering flushing 2`] = `
Array [
  "/component.js",
  "/component3.js",
]
`;

exports[`loading error 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`loading error 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`loading error 3`] = `
<div>
  MyLoadingComponent 
  {"isLoading":false,"pastDelay":false,"error":{}}
</div>
`;

exports[`loading success 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`loading success 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`loading success 3`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;

exports[`loading success 4`] = `
<div>
  MyComponent 
  {"prop":"bar"}
</div>
`;

exports[`preload 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`preload 2`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`preload 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`resolveModule 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`resolveModule 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`resolveModule 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`server side rendering 1`] = `
<div>
  fixture1
</div>
`;

exports[`server side rendering es6 1`] = `
<div>
  fixture2
</div>
`;

exports[`webpack: server side rendering flushing 1`] = `
Array [
  "/component.js",
  "/component2.js",
]
`;

exports[`webpack: server side rendering flushing 2`] = `
Array [
  "/component.js",
  "/component3.js",
]
`;
